fix(findings): make sure findings collapse when changing project id

--- a/public/iframe.css
+++ b/public/iframe.css
@@ -135,7 +135,7 @@ body.dark blockquote {
 }
 
 body.light blockquote::before {
-  color: var(--sl-color-gray-100);
+  color: var(--sl-color-gray-300);
 }
 
 body.dark blockquote::before {
